welcome.lessons.welcome.instructions.Instructions.scala.error
Program:1: error: not found: type white
setCouleurBrosse(c:white)
                   ^Program:1: error: not found: value c
setCouleurBrosse(c:white)
                 ^